@@ -76,7 +76,8 @@
 	
 		#if (F_CLOCK == 8000000)
 			#if (defined(__AVR_AT90USB82__) || defined(__AVR_AT90USB162__) || \
-			     defined(__AVR_ATMEGA8U2__) || defined(__AVR_ATMEGA16U2__))
+			     defined(__AVR_ATmega8U2__) || defined(__AVR_ATmega16U2__) || \
+				 defined(__AVR_ATmega32U2))
 				#define USB_PLL_PSC                0
 			#elif (defined(__AVR_ATmega16U4__) || defined(__AVR_ATmega32U4__))
 				#define USB_PLL_PSC                0
@@ -87,7 +88,8 @@
 			#endif
 		#elif (F_CLOCK == 16000000)
 			#if (defined(__AVR_AT90USB82__) || defined(__AVR_AT90USB162__) || \
-			     defined(__AVR_ATMEGA8U2__) || defined(__AVR_ATMEGA16U2__))
+			     defined(__AVR_ATmega8U2__) || defined(__AVR_ATmega16U2__) || \
+				 defined(__AVR_ATmega32U2))
 				#define USB_PLL_PSC                (1 << PLLP0)
 			#elif (defined(__AVR_ATmega16U4__) || defined(__AVR_ATmega32U4__))
 				#define USB_PLL_PSC                (1 << PINDIV)
