@@ -35,6 +35,8 @@
   *  - Fixed XPLAIN board Dataflash driver broken due to incorrect preprocessor commands
   *  - Fixed inverted XPLAIN LED driver output (LED turned on when it was supposed to be turned off, and vice-versa)
   *  - Fixed Class Driver struct interface numbers in the KeyboardMouse and VirtualSerialMouse demos (thanks to Renaud Cerrato)
+  *  - Fixed invalid USB controller PLL prescaler values for the ATMEGAxxU2 controllers
+  *  - Fixed lack of support for the ATMEGA32U2 in the DFU and CDC class bootloaders
   *
   *  \section Sec_ChangeLog091223 Version 091223
   *
